# pollenwatch

./: .gitignore  .release-please-manifest.json  ANALYTICS.md  CHANGELOG.md  CLAUDE.md  HA_COMPATIBILITY.md  LICENSE  MILESTONE_2.md  MILESTONE_3.md  MILESTONE_3b.md  Makefile  README.md  REVIEW_QUEUE.md  TODO.md  hacs.json  pyproject.toml  release-please-config.json  requirements-cleanroom.txt  requirements-e2e.txt  requirements-test.txt  threshold-provenance-review-FINAL.md
.github/workflows/: cleanroom.yml  lint.yml  prerelease-gate.yml  release-please.yml  validate.yml
brand/: GAUGE_SPEC.md  PollenWatch Brand Guide.html  PollenWatch Dashboard.html  README.md
brand/gauge/: PollenWatch Gauge.html  gauge-gen.js
cleanroom/: README.md  bootstrap.py  cleanup.py  lint.py  upgrade.py  verify.py
cleanroom/assets/: hacs.lock.json
cleanroom/config/: log_allowlist.json  matrix.json  pinned_release.json
cleanroom/lib/: ha_api.py  ha_flow.py  ha_ws.py  hacs.py  onboarding.py  snapshot.py
custom_components/pollenwatch/: __init__.py  analytics.py  binary_sensor.py  (+10 more)
docs/: MULTISPECIES_CARD_PLAN.md  PRERELEASE_GATE.md  RELEASE-INFRASTRUCTURE.md  THRESHOLD_PROVENANCE_REVIEW.md
tests/: conftest.py  test_analytics.py  test_card_registration.py  test_config_flow.py  test_diagnostics.py  test_dwd.py  test_epin.py  test_forecast.py  test_google.py  test_init.py  test_level_attribute.py  test_meteoswiss.py  test_open_meteo.py  test_polleninformation.py  test_recent_percentile.py  test_region_defaults.py  test_review_2026_07.py  test_threshold_status.py  test_websocket_api.py
(+20 files in other folders)
