[project]
name = "pollenwatch"
version = "3.1.0"
description = "Multi-source European pollen aggregator for Home Assistant"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
